Fixed view of profile when you aren't logged Fixed readAllBytes for java 8